0. Metadata
-----------
File version:	$Id: CHANGELOG 21693 2011-06-27 16:44:53Z dextercowley $
Copyright:		Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
License:		GNU General Public License version 2 or later; see LICENSE.txt

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the GPL.  Please
see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

-------------------- 1.6.4 Stable Release [27-Jun-2011] ------------------

27-Jun-2011 Mark Dexter
 # [#25696] Updating from J1.6.2 to J1.6.3 removes all files!

21-Jun-2011 Mark Dexter
 # [#26171] Automatic DB update (Christophe Demko)

-------------------- 1.6.3 Stable Release [18-Apr-2011] ------------------

18-Apr-2011 Mark Dexter
 # [#25661] *Redirect not now fully editable
 # [#25657] Mootools no longer loaded in backend
 # [#25688] Updates sites never re-enabled after being disabled

16-Apr-2011 Jean-Marie Simonet
 $ Updating es-ES installation file
 # [#25650] Can't insert image for menu item. Thanks Dennis and Rouven
 
15-Apr-2011 Jean-Marie Simonet
 # Removing install check

-------------------- 1.6.2 Stable Release [14-Apr-2011] ------------------

14-Apr-2011
 # [#25617] performance of assets table query with > 40 articles on website in registered mode

13-Apr-2011 Jean-Marie Simonet
 # Correcting error in the plugin language filter xml
 
12-Apr-2011 Mark Dexter
 # [#25593] Module Articles Category takes server timezone instead of Joomla one
 # [#25370] new layouts - No pagination on articles category page if first visit

11-Apr-2011 Mark Dexter
 # [#25602] Sort in Article Category List broken