@@ -5,9 +5,9 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<copyright>(C) 2005 - 2011 Open Source Matters. All rights reserved</copyright>
-	<license>GNU General Public License version 2 or later; see     LICENSE.txt</license>
-	<version>1.6.4</version>
-	<creationDate>June 2011</creationDate>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<version>1.6.5</version>
+	<creationDate>July 2011</creationDate>
 	<description>FILES_JOOMLA_XML_DESCRIPTION</description>
 
 	<fileset>
