@@ -5,4 +5,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 FILES_JOOMLA="Joomla CMS"
-FILES_JOOMLA_XML_DESCRIPTION="Joomla! 1.6.4 Content Management System"
+FILES_JOOMLA_XML_DESCRIPTION="Joomla! 1.6.5 Content Management System"
