@@ -5,4 +5,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 FILES_JOOMLA="Joomla CMS"
-FILES_JOOMLA_XML_DESCRIPTION="Système de gestion de contenu Joomla! 1.6.4"
+FILES_JOOMLA_XML_DESCRIPTION="Système de gestion de contenu Joomla! 1.6.5"
