@@ -1,6 +1,6 @@
 0. Metadata
 -----------
-File version:	$Id: CHANGELOG 21693 2011-06-27 16:44:53Z dextercowley $
+File version:	$Id: CHANGELOG 21770 2011-07-08 15:53:36Z dextercowley $
 Copyright:		Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
 License:		GNU General Public License version 2 or later; see LICENSE.txt
 
@@ -26,6 +26,11 @@ $ -> Language fix or change
 ^ -> Change
 - -> Removed
 ! -> Note
+
+-------------------- 1.6.5 Stable Release [11-Jul-2011] ------------------
+
+04-Jul-2011 Christophe Demko
+ # [#26284] Error during update can delete all Joomla program files
 
 -------------------- 1.6.4 Stable Release [27-Jun-2011] ------------------
 
